Changed About page and added Tank Trouble Project

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,11 @@ project:
   output-dir: docs
 
 website:
-  title: "Alec-lgtm.github.io"
+  title: "Alec Chen"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
       - projects.qmd
 
 format:
